--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -5,6 +5,10 @@
     cursor: pointer;
 }
 
+#component-post.paywalled {
+    opacity: 0.3;
+}
+
 #component-post:hover {
     background-color: #d4d4d4;
 }
