:lipstick: Update styling of paywall

--- a/src/components/paywall/paywall.css
+++ b/src/components/paywall/paywall.css
@@ -40,6 +40,10 @@
     margin-left: 1rem;
 }
 
+#paywall ul li {
+    list-style-type: disc;
+}
+
 #paywall .payments {
     display: flex;
     justify-content: center;
