:construction: Create options list on the navbar for enabling various actions
Actions that would be enabled include viewing posts from followers, seeing user profile, etc

--- a/src/sections/header/header.css
+++ b/src/sections/header/header.css
@@ -2,4 +2,24 @@
     width: 100vw;
     height: var(--navbar-height);
     background-color: red;
+    display: flex;
+    align-items: center;
+}
+
+#section-header .container {
+    display: flex;
+    justify-content: space-between;
+}
+
+#section-header .actions {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+#section-header .menu {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+    cursor: pointer;
 }
