:lipstick: Use Avenir as the default font family

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: Avenir, Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 
     --navbar-height: max(10vh, 5rem);
 }
