:lipstick: :recycle: Style all content same using same class

--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,11 @@
 ul li {
     list-style: none;
 }
+
+.content {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    gap: 1vw;
+    padding-bottom: 10vw;
+}
