:sparkles: Make the header section /navbar fixed on top

--- a/src/sections/header/header.css
+++ b/src/sections/header/header.css
@@ -2,8 +2,10 @@
     width: 100vw;
     height: var(--navbar-height);
     background-color: red;
+    z-index: 1;
     display: flex;
     align-items: center;
+    position: fixed;
 }
 
 #section-header .container {
