--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
     min-height: calc(100vh - var(--navbar-height));
     padding: 1vw 2vw;
     position: relative;
+    padding-top: calc(var(--navbar-height) + 1rem);
 }
 
 .container {
