--- a/src/elements/button/button.css
+++ b/src/elements/button/button.css
@@ -1,3 +1,9 @@
 button {
     cursor: pointer;
+    outline: none;
+    border: none;
+    background-color:aquamarine;
+    padding: 0.5rem 1rem;
+    margin: 0.1rem;
+    border-radius: 0.5rem;
 }
