--- a/src/sections/header/header.css
+++ b/src/sections/header/header.css
@@ -1,7 +1,7 @@
 #section-header {
     width: 100vw;
     height: var(--navbar-height);
-    background-color: red;
+    background-color: beige;
     z-index: 1;
     display: flex;
     align-items: center;
