--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -1,8 +1,9 @@
 
 #component-post {
-    border-top: 0.1rem solid #d4d4d4;
+    /* border-top: 0.1rem solid #d4d4d4; */
     padding: 0.5rem 0;
     cursor: pointer;
+    padding: 1rem;
 }
 
 #component-post.paywalled {
@@ -25,7 +26,7 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    border-left: 0.1rem solid #d4d4d4;
+    /* border-left: 0.1rem solid #d4d4d4; */
     margin: 3vw 0;
 }
 
@@ -42,4 +43,9 @@
     gap: 2rem;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
+}
+
+#component-post .activity-item {
+    display: flex;
+    gap: 0.3rem;
 }
