--- a/src/elements/button/button.css
+++ b/src/elements/button/button.css
@@ -1,9 +1,13 @@
 button {
     cursor: pointer;
     outline: none;
-    border: none;
+    border: solid 0.1rem beige;
     background-color:aquamarine;
     padding: 0.5rem 1rem;
     margin: 0.1rem;
     border-radius: 0.5rem;
+}
+
+button:hover {
+    opacity: 0.7;
 }
