--- a/src/components/posts/posts.css
+++ b/src/components/posts/posts.css
@@ -6,14 +6,24 @@
     border-radius: 1rem;
     background-color: aquamarine;
     padding: 1rem;
-    height: var(--navbar-height);
+    height: max-content;
+    min-height: var(--navbar-height);
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 1rem;
+
+    flex-wrap: wrap;
+}
+
+#section-posts form .width-n-input {
+    width: 80%;
+    gap: 1rem;
+    display: flex;
 }
 
 #section-posts form input {
-    width: 70%;
+    width: 80%;
     outline: none;
     border: none;
     padding: 0.5rem;
