--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -69,7 +69,7 @@
 
 #component-post .activity {
     display: flex;
-    gap: 2rem;
+    gap: 2vw;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
 }
