:lipstick: Make the search post input form floating
Also do some more styling in our work

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@
     padding: 1vw 2vw;
     position: relative;
     padding-top: calc(var(--navbar-height) + 1rem);
+    background-color: #f7f7ff;
+
 }
 
 .container {
