:lipstick: Change the login form size based on view mode
Make it bigger in terms of width on mobile

--- a/src/components/login-form/loginForm.css
+++ b/src/components/login-form/loginForm.css
@@ -4,6 +4,10 @@
     margin: auto;
 }
 
+.login-component.mobile {
+    width: 80vw;
+}
+
 .login-form {
     display: flex;
     flex-direction: column;
