--- a/src/components/posts/posts.css
+++ b/src/components/posts/posts.css
@@ -16,6 +16,7 @@
     align-items: center;
     justify-content: space-between;
     gap: 1rem;
+    margin-bottom: 1rem;
 
     flex-wrap: wrap;
     position: sticky;
