--- a/src/components/paywall/paywall.css
+++ b/src/components/paywall/paywall.css
@@ -1,11 +1,12 @@
 #paywall {
-    position: absolute;
+    position: fixed;
     width: 100%;
-    height: 100%;
-    top: 0;
+    height: calc(100% - var(--navbar-height));
+    top: var(--navbar-height);
     left: 0;
     z-index: 1;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgb(245, 245, 220, 0.1);
+    backdrop-filter: blur(0.1rem);
 
     display: flex;
     justify-content: center;
@@ -32,7 +33,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.7);
-    backdrop-filter: blur(0.1rem);
+    /* backdrop-filter: blur(0.1rem); */
 
     width: 40vw;
     display: flex;
