--- a/src/components/paywall/paywall.css
+++ b/src/components/paywall/paywall.css
@@ -23,7 +23,7 @@
 
 #paywall .amount-info {
     font-size: 0.8rem;
-    color: beige;
+    color: whitesmoke;
     font-style: italic;
 }
 
@@ -40,7 +40,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 2rem;
+    gap: 1rem;
     padding: 2rem;
     border-radius: 1rem;
 }
@@ -68,8 +68,9 @@
 }
 
 #paywall p,
+#paywall, span,
 #paywall ul li {
-    color: beige;
+    color: whitesmoke;
 }
 
 #paywall .payments {
@@ -82,6 +83,7 @@
 #paywall .payment-option {
     display: flex;
     flex-direction: column;
+    gap: 0.5rem;
     width: 100%;
 }
 
@@ -91,6 +93,7 @@
     align-items: center;
     justify-content: center;
     gap: 0.5rem;
+    color: white;
 }
 
 #paywal button {
