--- a/src/components/paywall/paywall.css
+++ b/src/components/paywall/paywall.css
@@ -67,6 +67,27 @@
     color: goldenrod;
 }
 
+#paywall .close-paywall {
+    position: absolute;
+    top: -1.3rem;
+    right: -1.3rem;
+    background-color: red;
+    border-radius: 50%;
+    display: grid;
+    place-items: center;
+    width: 1.3rem;
+    height: 1.3rem;
+    cursor: pointer;
+}
+
+#paywall .close-paywall:hover {
+    opacity: 0.7;
+}
+
+#paywall .close-paywall .fa-xmark {
+    color: white;
+}
+
 #paywall p,
 #paywall, span,
 #paywall ul li {
