:lipstick: Move the login form up a bit

--- a/src/components/login-form/loginForm.css
+++ b/src/components/login-form/loginForm.css
@@ -2,6 +2,8 @@
     width: 50vw;
     padding: 5vw;
     margin: auto;
+    position: relative;
+    top: calc(-1*var(--navbar-height));
 }
 
 .login-component.mobile {
