--- a/src/pages/cancel-subscription/subscriptionCancelled.css
+++ b/src/pages/cancel-subscription/subscriptionCancelled.css
@@ -4,9 +4,18 @@
 }
 
 #page-subscriptions-cancelled .container {
-    width: 50vw;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 2rem;
+    width: 90vw;
+}
+
+#page-subscriptions-cancelled .info {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
