:construction: Create the PayPal button

--- a/src/components/paywall/paywall.css
+++ b/src/components/paywall/paywall.css
@@ -80,6 +80,10 @@
     cursor: pointer;
 }
 
+#paywall form.payment-btn {
+    background-color: transparent;
+}
+
 #paywall .close-paywall:hover {
     opacity: 0.7;
 }
