--- a/src/components/paywall/paywall.css
+++ b/src/components/paywall/paywall.css
@@ -35,7 +35,7 @@
     background-color: rgba(0, 0, 0, 0.7);
     /* backdrop-filter: blur(0.1rem); */
 
-    width: 40vw;
+    width: 30vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -113,6 +113,8 @@
 #paywall .payment-option {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     gap: 0.5rem;
     width: 100%;
 }
