--- a/src/pages/users/userList.css
+++ b/src/pages/users/userList.css
@@ -1,17 +1,19 @@
-#page-users {
-    width: 35%;
-    height: calc(90vh - var(--navbar-height));
-    
+#page-user-list {   
     padding: 1rem;
-
-    position: sticky;
-    top: calc(var(--navbar-height) + 1rem);
 
     background-color: beige;
     border-radius: 0.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#page-users .scroll {
+#page-user-list .container {
+    margin: auto;
+    width: max-content;
+}
+
+#page-user-list .scroll {
     width: 100%;
     height: 100%;
     overflow-y: auto;
