--- a/src/sections/following/following.css
+++ b/src/sections/following/following.css
@@ -1,13 +1,12 @@
 #section-following .not-following {
     text-align: center;
-    padding-top: 5vw;
-    padding-bottom: 5vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1rem;
+    justify-content: center;
+    height: 60vh;
 }
-
 
 #section-following .call-to-action {
     font-size: 1.3rem;
