:adhesive_bandage: Use default background color as button outline
 The previous commit was unneccessary, and quite wrong actually

--- a/src/elements/button/button.css
+++ b/src/elements/button/button.css
@@ -1,6 +1,7 @@
 button {
     cursor: pointer;
     outline: none;
+    border: solid 0.1rem #f7f7ff;
     background-color:aquamarine;
     padding: 0.5rem 1rem;
     margin: 0.1rem;
